contract-exe: Better executable contracts
This commit does several things.

1. Add a way to make turn Plutus contracts into executables that can be
   used in the app platform. `Language.Plutus.Contract.run` turns any
   Plutus contract (written in normal Haskell style using Applicative,
   Alternative, Monad, etc.) into an event-based program that can be
   suspended and resumed later on.

2. Introduce a fine-grained effects system to capture the interactions
   that Plutus contracts can have with the outside world. See
   `Language.Plutus.Contract.Effects`.

3. Make it easier to write emulator/mockchain traces for contracts. See
   `Language.Plutus.Contract.Emulator`.

4. Make it easier to write unit tests for contracts, based on mockchain
   traces. See `Spec.HUnit`

There are two examples (`Examples.Crowdfunding` and `Examples.Game`)
that demonstrate the new features.

--- a/cabal.project
+++ b/cabal.project
@@ -13,7 +13,7 @@ packages: language-plutus-core
           plutus-book
           playground-common
           marlowe-playground-server
-          plutus-contract-exe
+          plutus-contract
           deployment-server
 optimization: 2
 constraints: language-plutus-core +development
