plutus-use-cases: add some golden PIR tests
These are of *somewhat* limited utility in that the PIR is too big to
inspect by hand, but it's useful to have because:
- It's handy to have some real, big, PIR examples around. For one thing
I can scan them to see if were doing anything really dumb in codegen.
- It's helpful for Luite to compare the results on other platforms with
a bigger example that's more likely to trigger nondeterministic
behaviour from GHC.

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -3,7 +3,7 @@
   - {name: unsafePerformIO, within: [PlutusPrelude, Language.PlutusCore.Generators.Internal.Entity, Language.PlutusCore.Constant.Dynamic.Call, Language.PlutusCore.Constant.Dynamic.Emit, Language.PlutusCore.Constant.Dynamic.Instances, Language.PlutusCore.StdLib.Type, Language.PlutusTx.Plugin, Language.PlutusTx.Evaluation]}
   - {name: error}
   - {name: undefined, within: [Language.PlutusCore.Constant.Apply, Language.PlutusTx.Lift.Class, Language.PlutusTx.Lift.Instances]}
-  - {name: fromJust, within: [Language.PlutusTx.Lift]}
+  - {name: fromJust, within: [Language.PlutusTx.Lift, Spec.Lib]}
   - {name: foldl, within: []}
   - {name: traceShowId, within: []} # for debugging only, should not be merged to master
 
