plutus-use-cases: include benchmarks using optimized functions
This seems to gain us between 0% and 25%.

--- a/plutus-use-cases/plutus-use-cases.cabal
+++ b/plutus-use-cases/plutus-use-cases.cabal
@@ -108,6 +108,7 @@ benchmark plutus-use-cases-bench
         Scott
         Recursion
         IFix
+        Opt
     default-language: Haskell2010
     ghc-options: -Wall -Wincomplete-uni-patterns
                  -Wincomplete-record-updates -Wredundant-constraints -Widentities
