added simplified payToWallet example

--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -51,6 +51,7 @@ library
         Dumb
       , Hello
       , PayToWallet1
+      , PayToWallet2
     ghc-options: -Wall -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc
     build-tool-depends: unlit:unlit -any
     build-depends:
@@ -69,7 +70,7 @@ test-suite plutus-book-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       Spec.HelloSpec
-                     , Spec.PayToWallet1Spec
+                     , Spec.PayToWalletSpec
   build-depends:       base >= 4.9 && <5
                      , containers -any
                      , hspec -any
