--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -48,15 +48,17 @@ library
     default-language: Haskell2010
     hs-source-dirs: src
     exposed-modules:
-        Dumb
-      , Hello
-      , PayToWallet1
-      , PayToWallet2
+        Hello
+      , PayToWallet
+      , PayToWalletSimple
+      , Trigger
+      , TriggerSimple
     ghc-options: -Wall -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc
     build-tool-depends: unlit:unlit -any
     build-depends:
       base >=4.9 && <5,
       template-haskell >=2.13.0.0,
+      text -any,
       language-plutus-core -any,
       plutus-playground-lib -any,
       plutus-tx -any,
@@ -71,6 +73,8 @@ test-suite plutus-book-test
   main-is:             Spec.hs
   other-modules:       Spec.HelloSpec
                      , Spec.PayToWalletSpec
+                     , Spec.TriggerSpec
+                     , Utils
   build-depends:       base >= 4.9 && <5
                      , containers -any
                      , hspec -any
