--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -48,11 +48,12 @@ library
     default-language: Haskell2010
     hs-source-dirs: src
     exposed-modules:
-        Hello
-      , PayToWallet
-      , PayToWalletSimple
-      , Trigger
-      , TriggerSimple
+        Game.Guess
+      , OffChain.Hello
+      , OffChain.PayToWallet
+      , OffChain.PayToWalletSimple
+      , OffChain.Trigger
+      , OffChain.TriggerSimple
     ghc-options: -Wall -Wno-unused-imports -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc
     build-tool-depends: unlit:unlit -any
     build-depends:
@@ -71,9 +72,9 @@ test-suite plutus-book-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       Spec.HelloSpec
-                     , Spec.PayToWalletSpec
-                     , Spec.TriggerSpec
+  other-modules:       OffChain.HelloSpec
+                     , OffChain.PayToWalletSpec
+                     , OffChain.TriggerSpec
                      , Utils
   build-depends:       base >= 4.9 && <5
                      , containers -any
