Add "user-space" sealing mechanism
This partially implements the "passing sealed data scripts through the redeemer"
system that we've discussed in the past.

It is partial because to actually get the security properties we need we
need `Sealed` and friends to be builtins, and we've concluded that this
requires the full extensible builtins work before we can do it.

However, in the mean time we can implement it in "user-space" by just
defining the types and values in Haskell. This means that users can,
in fact, seal things maliciously, but it allows us to implement all the
changes to how redeemer scripts are constructed and how validation
works, which is moderately disruptive.

This is notably missing convenience functions for creating redeemer
scripts that ignore their arguments (a common case). I think we can do
this nicely with our `Typeable`, but I haven't done so yet and I wanted
to put this up quickly.

I had to rewrite the state machine support to the "nice" new version
because it wouldn't work with the new types for a reason I've already
forgotten. However, it was straightforward and the new version is much
nicer!

This PR contains one CURSED HACK. If someone can come up with a way to
avoid it I woudl be grateful.

--- a/plutus-tx/plutus-tx.cabal
+++ b/plutus-tx/plutus-tx.cabal
@@ -74,6 +74,7 @@ library plutus-tx-compiler
     exposed-modules:
         Language.PlutusTx.Plugin
         Language.PlutusTx.Builtins
+        Language.PlutusTx.Sealed
         Language.PlutusTx.PLCTypes
         Language.PlutusTx.PIRTypes
         Language.PlutusTx.Utils
