--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -56,6 +56,7 @@ library
         , OffChain.Trigger
         , OffChain.TriggerSimple
         , Parameters.Crowd
+        , Token.Fungible
     ghc-options: -Wall -fno-warn-unused-imports -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc
     build-tool-depends: unlit:unlit -any
     build-depends:
