rename as much meadow as possible
Terraform changes would require q bit of terraform renaming
work to be carried out on prod, I don't think it's worth the
effort right now.

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ pkgs/.stack
 # Misc
 .history/
 .virtualenv
+.vscode/
 .hsenv
 TAGS
 .DS_Store
@@ -53,4 +54,4 @@ TAGS
 *.tfvars
 gh-pages
 .importify/
-meadow/meadow.yaml
+marlowe-playground-server/playground.yaml
