--- a/stack.yaml
+++ b/stack.yaml
@@ -9,7 +9,7 @@ packages:
 - plutus-use-cases
 - playground-common
 - marlowe
-- meadow
+- marlowe-playground-server
 - plutus-wallet-api
 - plutus-playground-server
 - plutus-playground-lib
