runghc was creating *.hi and *.o files
These files were not being deleted hence they filled up the disk
eventually. We now delete the whole directory.

Additionally the temporary library has been updated and is now
generalized to MonadIO however we needed to use withFile from
System.IO and this did need to be generalized to MonadIO

--- a/playground-common/playground-common.cabal
+++ b/playground-common/playground-common.cabal
@@ -24,7 +24,7 @@ library
         Language.Haskell.Interpreter
         Servant.Extra
         Servant.Prometheus
-        System.IO.Temp.Extras
+        System.IO.Extras
     other-modules:
         Git.TH
     hs-source-dirs: src
