Create a github deployment and don't bother using slack
If the initial create github deployment fails you will know because
it should have appeared almost as soon as you clicked the merge button

If the deployment fails to update within a few minutes you can check
the logs

I don't feel there is a real need for the slack alerts therefore I have
removed them

--- a/deployment-server/deployment-server.cabal
+++ b/deployment-server/deployment-server.cabal
@@ -28,6 +28,7 @@ library
       , aeson
       , bytestring
       , directory
+      , github
       , github-webhooks
       , mtl
       , newtype-generics
@@ -35,7 +36,6 @@ library
       , servant
       , servant-github-webhook
       , servant-server
-      , slack-web
       , temporary
       , typed-process
       , text
