Ledger: learn a basic typed transaction interface
This is still very incomplete, but it's enough that we can do some
serious examples with it, so I think it's worth committing.

I don't know whether we want to actually use this in the use-cases
examples, or whether I should make new versions that use it.

--- a/language-plutus-core/language-plutus-core.cabal
+++ b/language-plutus-core/language-plutus-core.cabal
@@ -66,6 +66,7 @@ library
         Language.PlutusCore.StdLib.Everything
         Language.PlutusCore.StdLib.Meta
         Language.PlutusCore.StdLib.Meta.Data.Tuple
+        Language.PlutusCore.StdLib.Meta.Data.Function
         Language.PlutusCore.StdLib.Type
         Language.PlutusCore.Examples.Everything
         Language.PlutusCore.Generators
