--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -48,7 +48,13 @@ library
     default-language: Haskell2010
     hs-source-dirs: src
     exposed-modules:
-          NonFungible.NonFungible1
+          Auction.English
+        , Marlowe.Language.Marlowe
+        , Marlowe.Language.Marlowe.Client
+        , Marlowe.Language.Marlowe.Escrow
+        , Marlowe.Language.Marlowe.Actus
+        , Marlowe.Language.Marlowe.Pretty
+        , NonFungible.NonFungible1
         , NonFungible.NonFungible2
         , NonFungible.NonFungible3
         , NonFungible.NonFungible4
@@ -65,15 +71,11 @@ library
         , OffChain.TriggerSimple
         , Parameters.Crowd
         , Token.Fungible
-        , Marlowe.Language.Marlowe
-        , Marlowe.Language.Marlowe.Client
-        , Marlowe.Language.Marlowe.Escrow
-        , Marlowe.Language.Marlowe.Actus
-        , Marlowe.Language.Marlowe.Pretty
     other-modules:
           Marlowe.Language.Marlowe.Common
-    ghc-options: -Wall -fno-warn-unused-imports -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc
+    ghc-options: -Wall -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc
     build-tool-depends: unlit:unlit -any
+
     build-depends:
       base >=4.9 && <5,
       bytestring -any,
@@ -93,7 +95,8 @@ test-suite plutus-book-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       Game.GuessSpec
+  other-modules:       Auction.EnglishSpec
+                     , Game.GuessSpec
                      , Multi.VestingSpec
                      , OffChain.HelloSpec
                      , OffChain.PayToWalletSpec
@@ -116,6 +119,7 @@ test-suite plutus-book-test
                      , hspec -any
                      , plutus-book -any
                      , plutus-emulator -any
+                     , plutus-tx -any
                      , plutus-wallet-api -any
                      , text
   ghc-options:         -Wall
