--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -149,3 +149,22 @@ test-suite plutus-contract-test
         lens -any,
         transformers -any,
         extensible-effects -any
+
+test-suite contract-doctests
+    type: exitcode-stdio-1.0
+    hs-source-dirs: doctest
+    default-language: Haskell2010
+    main-is: Main.hs
+    ghc-options: -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=asciidoc -Wno-unused-imports
+    build-tool-depends: unlit:unlit -any, doctest:doctest -any
+    other-modules:
+      ContractAPI
+    build-depends:
+      base >=4.9 && <5,
+      template-haskell >=2.13.0.0,
+      bytestring -any,
+      language-plutus-core -any,
+      plutus-contract -any,
+      plutus-wallet-api -any,
+      prettyprinter -any,
+      containers -any
