--- a/plutus-use-cases/plutus-use-cases.cabal
+++ b/plutus-use-cases/plutus-use-cases.cabal
@@ -51,7 +51,10 @@ library
                  -- See Plutus Tx readme
                  -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
     build-depends:
+        plutus-contract -any
+    build-depends:
         base -any,
+        aeson -any,
         bytestring -any,
         containers -any,
         mtl -any,
@@ -84,13 +87,15 @@ test-suite plutus-use-cases-test
                  -Wincomplete-uni-patterns -Wincomplete-record-updates
                  -Wredundant-constraints -Widentities -rtsopts
     build-depends:
+        plutus-tx -any,
+        plutus-contract -any,
+        plutus-wallet-api -any,
+        plutus-use-cases -any,
+        plutus-emulator -any
+    build-depends:
         base >=4.9 && <5,
         containers -any,
         hedgehog -any,
-        plutus-tx -any,
-        plutus-wallet-api -any,
-        plutus-use-cases -any,
-        plutus-emulator -any,
         prettyprinter -any,
         tasty -any,
         tasty-hunit -any,
@@ -123,3 +128,23 @@ benchmark plutus-use-cases-bench
         plutus-use-cases -any,
         plutus-wallet-api -any,
         bytestring -any
+
+executable contract-guessing-game
+    default-language: Haskell2010
+    main-is: Main.hs
+    hs-source-dirs: exe/game
+    build-depends:
+        plutus-contract -any,
+        plutus-use-cases -any
+    build-depends:
+        base >=4.7 && <5
+
+executable contract-crowdfunding
+    default-language: Haskell2010
+    main-is: Main.hs
+    hs-source-dirs: exe/crowdfunding
+    build-depends:
+        plutus-contract -any,
+        plutus-use-cases -any
+    build-depends:
+        base >=4.7 && <5
