--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -86,8 +86,8 @@ library
       plutus-wallet-api -any,
       plutus-emulator -any,
       prettyprinter -any,
-      containers -any,
-      wl-pprint -any
+      containers -any--,
+--      wl-pprint -any
 
 test-suite plutus-book-test
   type:                exitcode-stdio-1.0
@@ -121,6 +121,5 @@ test-suite plutus-book-test
                      , plutus-emulator -any
                      , plutus-wallet-api -any
                      , text
-                     , wl-pprint -any
   ghc-options:         -Wall
   default-language:    Haskell2010
