--- a/plutus-book/plutus-book.cabal
+++ b/plutus-book/plutus-book.cabal
@@ -86,8 +86,8 @@ library
       plutus-wallet-api -any,
       plutus-emulator -any,
       prettyprinter -any,
-      containers -any
---      wl-pprint -any
+      containers -any,
+      wl-pprint -any
 
 test-suite plutus-book-test
   type:                exitcode-stdio-1.0
