Add lattice classes
This adds lattice classes to `plutus-tx`. We use them mainly for
`Interval`, but also in a few other places.

It's a little awkward putting them in `plutus-tx` when we're primarily
using them off-chain, but:
- We probably do want to use them on-chain when working with
`Interval`s.
- When we want to use a class on-chain we have to duplicate it if it's
from a non-controlled source.

So given that we'll need a copy in `plutus-tx`, it seems like we might
as well just stick with the one copy for now.

This lets us sensibly define a monoid instance for `Tx` too, which is
nice.

Fixes #1309

--- a/plutus-tx/plutus-tx.cabal
+++ b/plutus-tx/plutus-tx.cabal
@@ -46,6 +46,7 @@ library
         Language.PlutusTx.Bool
         Language.PlutusTx.Eq
         Language.PlutusTx.Functor
+        Language.PlutusTx.Lattice
         Language.PlutusTx.List
         Language.PlutusTx.Ord
         Language.PlutusTx.Maybe
