plutus-contract: Row types for request/response pairs
* Use `row-types` instead of `extensible-effects` to model the inputs
and outputs that contracts expect/produce. The `Hooks` and `Event` types
are now parameterised by their rows

* The type of contracts is now `Contract s a` where `s` is a map of
symbols to pairs of request-response types. Each entry in this map
corresponds to a request the contract can make.

* When writing contracts we now need to declare their schema manually,
in form of a type synonym. For example, the game contract's schema is
`type GameSchema = BlockchainActions .\/ Endpoint "lock" LockParams .\/
Endpoint "guess" GuessParams` - it's a contract that uses the regular
blockchain actions and exposes two endpoints called "lock" and "guess".

* User-defined endpoints are now type-checked properly.

* We can construct a schema of all the endpoints that are ever going to
be used by a contract from the contract's type alone. For example, the
contract executables generated by `Language.Plutus.Contract.App` now
have a `schema` mode that prints the IOTS schema (not 100% finished, see
below) - but we can already see that all the information is available at
compile time:

```
guess // guess endpoint
import * as t from 'io-ts';
// Language.PlutusTx.Coordination.Contracts.Game.GuessParams
const GuessParams = t.type({
    guessWord: t.string
});
lock // lock endpoint
import * as t from 'io-ts';
// Ledger.Ada.Ada
const Ada = t.type({
    getLovelace: t.Int
});
// Language.PlutusTx.Coordination.Contracts.Game.LockParams
const LockParams = t.type({
    secretWord: t.string,
    amount: Ada
});
```

--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -43,16 +43,16 @@ library
     exposed-modules:
         Language.Plutus.Contract
         Language.Plutus.Contract.App
-        Language.Plutus.Contract.Effects
         Language.Plutus.Contract.Effects.AwaitSlot
         Language.Plutus.Contract.Effects.ExposeEndpoint
         Language.Plutus.Contract.Effects.WatchAddress
         Language.Plutus.Contract.Effects.WriteTx
+        Language.Plutus.Contract.Request
+        Language.Plutus.Contract.Schema
         Language.Plutus.Contract.Test
         Language.Plutus.Contract.Trace
-        Language.Plutus.Contract.Prompt.Event
-        Language.Plutus.Contract.Prompt.Hooks
         Language.Plutus.Contract.Record
+        Language.Plutus.Contract.IOTS
         Language.Plutus.Contract.Servant
         Language.Plutus.Contract.Resumable
         Language.Plutus.Contract.Tx
@@ -63,7 +63,8 @@ library
     build-depends:
         plutus-wallet-api -any,
         plutus-emulator -any,
-        plutus-tx -any
+        plutus-tx -any,
+        iots-export -any
     build-depends:
         aeson -any,
         base >=4.7 && <5,
@@ -78,12 +79,12 @@ library
         profunctors -any,
         transformers -any,
         warp -any,
-        extensible-effects -any,
         transformers-base -any,
         monad-control -any,
         mmorph -any,
         tasty -any,
-        tasty-hunit -any
+        tasty-hunit -any,
+        row-types -any
 
 test-suite contract-doctests
     type: exitcode-stdio-1.0
