Add marlowe symbolic execution

--- a/deployment/nixops/secrets.json.example
+++ b/deployment/nixops/secrets.json.example
@@ -13,5 +13,6 @@
         "googleClientID": "somekey",
         "googleClientSecret": "somekey",
         "deploymentRef": "somekey",
-        "githubToken": "somekey"
+        "githubToken": "somekey",
+        "apiGatewayKey": "somekey"
 }
