contract: Add UtxoAt query
* Add the `UtxoAt` effect with
  `utxoAt :: HasUtxoAt s => Address -> Contract s AddressMap`, allowing
  contracts to query the UTXO set through the node client.

* Note that this also changes the way `WalletAPI` is implemented in the
  emulator: Wallets now keep track of the entire UTXO set, not just the
  subset of unspent outputs at the adddresses they are interested in. So
  the behaviour of `WalletAPI` in this regard is now that of a node
  client.

--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -46,6 +46,7 @@ library
         Language.Plutus.Contract.App
         Language.Plutus.Contract.Effects.AwaitSlot
         Language.Plutus.Contract.Effects.ExposeEndpoint
+        Language.Plutus.Contract.Effects.UtxoAt
         Language.Plutus.Contract.Effects.WatchAddress
         Language.Plutus.Contract.Effects.WriteTx
         Language.Plutus.Contract.Request
