--- a/plutus-tx/plutus-tx.cabal
+++ b/plutus-tx/plutus-tx.cabal
@@ -53,6 +53,7 @@ library
         Language.PlutusTx.Ord
         Language.PlutusTx.Maybe
         Language.PlutusTx.Numeric
+        Language.PlutusTx.Ratio
         Language.PlutusTx.Semigroup
         Language.PlutusTx.Monoid
         Language.PlutusTx.AssocMap
@@ -134,6 +135,7 @@ test-suite plutus-tx-tests
         Plugin.Typeclasses.Spec
         Plugin.Typeclasses.Lib
         Plugin.Lib
+        StdLib.Spec
         TH.Spec
         TH.TestTH
     default-language: Haskell2010
@@ -148,6 +150,8 @@ test-suite plutus-tx-tests
         bytestring -any,
         template-haskell -any,
         tasty -any,
-        tasty-hunit -any
+        tasty-hunit -any,
+        tasty-hedgehog -any,
+        hedgehog -any,
     -- this makes the plugin give better errors
     ghc-options: -g
