use-cases: Add escrow contract
* Adds an escrow contract that can be used not just on its own but also
  as part of the setup of another contract (collecting the initial
  contributions from the parties involved)
* The contract works like the crowdfunding one in that the contributions
  can be made in parallel

--- a/plutus-use-cases/plutus-use-cases.cabal
+++ b/plutus-use-cases/plutus-use-cases.cabal
@@ -28,6 +28,7 @@ library
         Language.PlutusTx.Coordination.Contracts
         Language.PlutusTx.Coordination.Contracts.CrowdFunding
         Language.PlutusTx.Coordination.Contracts.Currency
+        Language.PlutusTx.Coordination.Contracts.Escrow
         Language.PlutusTx.Coordination.Contracts.Future
         Language.PlutusTx.Coordination.Contracts.Game
         Language.PlutusTx.Coordination.Contracts.GameStateMachine
@@ -72,6 +73,7 @@ test-suite plutus-use-cases-test
     other-modules:
         Spec.Crowdfunding
         Spec.Currency
+        Spec.Escrow
         Spec.Future
         Spec.Game
         Spec.GameStateMachine
