Fix cabal project file
Missing marlowe-symbolic.

--- a/cabal.project
+++ b/cabal.project
@@ -13,6 +13,7 @@ packages: language-plutus-core
           plutus-book
           playground-common
           marlowe-playground-server
+          marlowe-symbolic
           plutus-contract
           deployment-server
           iots-export
