update modules in plc-agda.cabal; add metatheory to cabal.project
this allows building/installing with `cabal v2-install metatheory` from the root

--- a/cabal.project
+++ b/cabal.project
@@ -17,6 +17,7 @@ packages: language-plutus-core
           plutus-contract
           deployment-server
           iots-export
+          metatheory
 optimization: 2
 constraints: language-plutus-core +development
            , plutus-wallet-api +development
