--- a/plutus-wallet-api/plutus-wallet-api.cabal
+++ b/plutus-wallet-api/plutus-wallet-api.cabal
@@ -60,6 +60,7 @@ library
         Language.PlutusTx.StateMachine
     reexported-modules:
         Data.Aeson.Extras,
+        Data.Text.Prettyprint.Doc.Extras,
         Ledger,
         Ledger.Ada,
         Ledger.AddressMap,
@@ -108,6 +109,7 @@ library plutus-ledger
     default-language: Haskell2010
     exposed-modules:
         Data.Aeson.Extras
+        Data.Text.Prettyprint.Doc.Extras
         Ledger
         Ledger.Ada
         Ledger.AddressMap
