--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-13.15
+resolver: lts-13.19
 
 packages:
 - language-plutus-core
@@ -51,6 +51,7 @@ extra-deps:
 - random-strings-0.1.1.0@sha256:935a7a23dab45411960df77636a29b44ce42b89eeb15f2b1e809d771491fa677,2517
 - extensible-effects-5.0.0.1
 - sbv-8.4
+# Purty deps
 - componentm-0.0.0.2
 - teardown-0.5.0.1
 - dhall-1.23.0
