--- a/plutus-use-cases/plutus-use-cases.cabal
+++ b/plutus-use-cases/plutus-use-cases.cabal
@@ -26,6 +26,7 @@ flag defer-plugin-errors
 library
     exposed-modules:
         Language.PlutusTx.Coordination.Contracts
+        Language.PlutusTx.Coordination.Contracts.TokenAccount
         Language.PlutusTx.Coordination.Contracts.CrowdFunding
         Language.PlutusTx.Coordination.Contracts.Currency
         Language.PlutusTx.Coordination.Contracts.Escrow
@@ -83,6 +84,7 @@ test-suite plutus-use-cases-test
         Spec.MultiSigStateMachine
         Spec.PubKey
         Spec.Rollup
+        Spec.TokenAccount
         Spec.Vesting
     default-language: Haskell2010
     ghc-options: -Wall -Wnoncanonical-monad-instances
