--- a/plutus-use-cases/plutus-use-cases.cabal
+++ b/plutus-use-cases/plutus-use-cases.cabal
@@ -49,7 +49,8 @@ library
                  -- See Plutus Tx readme
                  -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
     build-depends:
-        plutus-contract -any
+        plutus-contract -any,
+        iots-export -any
     build-depends:
         base -any,
         aeson -any,
