Fix serialisation of symbolic execution result

--- a/marlowe-symbolic/marlowe-symbolic.cabal
+++ b/marlowe-symbolic/marlowe-symbolic.cabal
@@ -35,4 +35,5 @@ library
                         servant,
                         servant-client -any,
                         template-haskell,
-                        utf8-string
+                        utf8-string,
+                        wl-pprint
