emulator: rewrite to use effects

--- a/plutus-contract/plutus-contract.cabal
+++ b/plutus-contract/plutus-contract.cabal
@@ -84,6 +84,7 @@ library
         tasty -any,
         tasty-hunit -any,
         row-types -any,
+        freer-simple -any,
         prettyprinter >=1.1.0.1
 
 test-suite contract-doctests
